@@ -13,23 +13,25 @@ EBUILD i3-4.7.2-r1.ebuild 1564 SHA256 2b2d0317ef6318e475067e1edef79e20b1551f697d
 EBUILD i3-4.7.2.ebuild 1479 SHA256 f36e3e436d3fdb5e51abbfe88b2e7aa91a08291a78f25ab22e22e4850376f508 SHA512 ddea00067750adebc6f71a077835634e7ee90b230a29e2ed75fcbb85416c7ec8fc4b2ba8dd84cd86bb8520d945ba7fc427829b24fac9529d94d7f2f053852917 WHIRLPOOL 37b5f3c9a1ffc49d5d57cde7ac3c7796adffe4064be16b835b1c12fce19882f5e3162d24c206df922892290c606169bfa51193e0934fa67f9fd6215de62f9705
 EBUILD i3-4.7.ebuild 1482 SHA256 6123e3c08d14556316e24e064de9846586f7e20776f8398fabefab0853931516 SHA512 ffca7e9054c73feeaf4fb76dec6e3bbf079c1eb1358be55394923a99e50a6735fb5599b879e3c459bfd26bcf77832dd7248489b91ac0d523877468571d915e7e WHIRLPOOL 865b25367a8b329eda187a68cf2ccec3200e26aac516cf8a93ce301222b2272bf2327b09a6867c06e47b42cd21d24e2b9e68cf0ba5d0159d03a451fd8aafdefc
 EBUILD i3-4.8.ebuild 1490 SHA256 c72413fc2341f9e2fdd42438805e5021462e581c24bb4ea04bd71281cc36a785 SHA512 e9922bf24029dac537033c60ac986cdf55c91daf47bdff870b67e98ff3df6c207b0f8da6a737c5c43032e97f8264120d1be87c4ae26b7901e1fcbca05e1e7fe9 WHIRLPOOL f4aa12d846f3e8e04820ae136007cce8f4553da9c9fe33c3549cedad7ed7cb00a0b89399b15e6bf0ef221649625dab06c0357d338b658bd8c391e6f0fda2656a
-EBUILD i3-9999.ebuild 1493 SHA256 0b64270ce607ef4508dae16259b7dd843e0c175e3c3629496e7cc66a4d189dba SHA512 8eeeab4ff9f3862a5943cb6e9c253d5ba1a30927fd2dfafc50ecd7e0b8e9d80a324b85d772406ec01846282eb1a0985a95c5b2f9e138819b87c92c575134ebe7 WHIRLPOOL ca3531e8df0a2618330fed1945d4558c1032c3c3884d5cca5e39719325519c14a9587eb79f6ead4a71acdb0a6c0d95d7f500d3836e130e069b28e1020e2bfb83
-MISC ChangeLog 7975 SHA256 5fcd08b0717710abd6a77c59bba24667fd2f1f6c9224795f074099b75f8e91fc SHA512 6b05a720bfc3ffe8f845b86f095ba764d475d2927d0f4515a4d5ff78ac9131d9c190216fa5f59d9f66d9be65fa503b3cb0f22351bc4a5d81f9e0e81f0d369419 WHIRLPOOL 6425004c4961aa528142d867cc380d58a6c743c58063e1e402a6f19b47f4e8e9ae507f66e1355fd30fb375583a923c3861b35266079cc510f14eade852dda5f0
+EBUILD i3-9999.ebuild 1520 SHA256 187c33f683c977de141eacdde86d81b7aceed3c2e2a42062a18a6f11ad7fd2dc SHA512 3ebd0305eb5b6567e76e239df565751107dac29f06d4a3757f4d0e85aa1cca7b57e6720c942975165e494248be55bd9c553c8f314a7980566bda4855ccc4c771 WHIRLPOOL de261fe5cfc740581d8b84bb0f2c9bd0175464038557b21cce422885ace82b3ff34d017b30b9da72bc334b7f7fb35dc1e4f1019b6e1b54ecf1cb57d9169e90f3
+MISC ChangeLog 8092 SHA256 37e912eb5438a1e88fae88da6b9616401a332f06b023cee0dafd04a6d64ba603 SHA512 30246e1fd47906b8b880decbfbf7e41ae3ed606b13c9feb77097e15fcab80528667763f05471dd43cbdff164da813f5441e039bb57796f23417d67a40c7019fc WHIRLPOOL 2379e4a7e8c0756bae26ecd5932bb725b0e76da1453629100f2f4306cb39c44e58627f5b8e7dff4b25fe175b9b55e8a4293b1c48e37ebfefaf2dd5612ec5bfe2
 MISC metadata.xml 578 SHA256 747cbbd11d56e581ae8e58210207070fee2a663d7f029b260a5e5f1a69fb05ad SHA512 b8afbb2ec3fa72b688c19935ea9c28b43fdd4569a25ec3a91d04a211ccffd1cb661a03adf810b6c0fa054505bcd8086db60764bafd721411eb81f287b19e7514 WHIRLPOOL 6802ac798ca27a7cb073522c5e0c883459865cb63110f575a7d2ba2db0b13feb36d1102ff86a75e04c16bb740911d39b67d4da9b13c6683e051f8a8f3b44fa68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTngEbAAoJEF0huFKJUZL5hQkP/igtI98TZu2o95H2SUh3fPdX
-qacY8zpaVssuN3k1xDRR8++1pdf+i5juoHSiQuykWIaOg44om6SoQT6LgfvVHr7o
-Wdbt83wdPmnYtf3zcw7cYr6TYm4QMf/qaLCrqdrTS6aHK6fFwrdOSrUYAZQ5RqYr
-22/svylBqAI9+GrxLtS7VQkq9eKdN++UGtbdwm0Bm1bm5UfTyVCV+0587/ZdZyUg
-N+KOghsGUzNp6fo+6q5j1tdBdlujB8yyu5aiuj2IHychCMJxTJ0Dro44bnUhEQr6
-Vf4TzNq6rtNdvdEir3DJjMeiJfa84dwhZoy0OlBcjat4y/vYBNodVPiw37NkgZPZ
-Z3pchyP7wW2bqoC6OervSxqZ4IONC6L4lSx2XEDj8Y3f1sCJvNJZkFxV7Jd3EcaL
-U72v6HT9t+sXApKBbiNrdjbXwIcmGLfW3+97RT2p3tMbqumOi2K7o853z2+rNtS/
-U3QPwsn35WpyX3LVU8g/+ulJmxij97fFeyf+nekgcrYVTjMKsaTY7mjhElyoFSvz
-SKo40hIFnlvG0z/3ef6Co/uNcyJnICQCOXrMc418y+0lACot6/pSuUruI++xEV4Y
-rfJtWYKHHehZtvJKziisKoHUcvvI+Ed3H09QQ84ry7JLmPdgG7Up8jI6m8cCeISC
-ejf5S9lnv4MTjwL44PF2
-=dDf3
+iQJ8BAEBCABmBQJTnvXQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgPxwP/0VnUMuji3T0ysUY/qqdeB4B
+MHJrLEjNc2pwvpLRWtcB2bHfi/9HgY1caKQaeyTgFDZORgpZsDmAsSm2hZgtqBvc
+OmIYmvj7OCEuy1ni52tGFbmA2dHncmwmuSSokRh2wn7NjfQ+XuGQuldXqJnrnrfI
+OUPoQQklybm3ZRmYRzAFjSRDZchWxujdFj/F1Yq27LlUzdYEj6VH+jNz9QUzFpfw
+XAYEudAHBaDP4ij2/LM/b6VExIGFkC73G3WuaeHkheBmVGPrKhmoZwW89+OTCAeg
+67ED+A6Dd3Lqfh8kODk67r+gua6+aGJERROtWYvPmtGbTsdVr4PzliM/i/UY5Rfa
+Cs4yupxGuhF+wraR2cqnXsjcs0m8S5LYAGLkd1uPjZqv8xWqSndC8fojK3f7hfeI
+x4adQQNkLP2kAs2ilwUsPODbzSq9VwpiQ7U1f3qi6YEdyUWFs5Jcl1ujmJH0oQon
+IvwJDwYVvYfr/zlLy5hZeMpNda5c1+eDuDe6HA69WHce/ME0X52K90c3guVFYnZD
+t9B2D6SDVY0awT9w/EHGOQyBcj21gyl+f+bHchvbgw2gzIXSm2GJ2hgPd7F3pJe7
+VH3hReb6RtM9vqXp6oxot1ldJSeYVZVZluHGPBViJrvb6jYginmHzKrviys/Z2F5
+HkoIZg33uiJqLBBEpqaV
+=p3UQ
 -----END PGP SIGNATURE-----
